# leaderboards

back/: .env  Cargo.toml  sample_data.sql  schema.sql
back/src/: main.rs  models.rs
back/src/routes/: auth.rs  leaderboards.rs  mod.rs
front/: index.html  package-lock.json  package.json
front/public/: index.css
front/src/: App.svelte  main.ts  stores.ts
front/src/components/: Navbar.svelte
front/src/views/: Home.svelte  Leaderboard.svelte  Login.svelte  Register.svelte
