[package]
name = "back"
version = "0.1.0"
authors = ["Adam Thibert <adam.thibert@epita.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-http = "2.2.0"
actix-cors = "0.5.4"
actix-web-httpauth = "0.5.1"
listenfd = "0.3.3"
sqlx = { version = "0.4.2", features = [ "runtime-actix-native-tls", "mssql" ] }
futures = "0.3.15"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
anyhow = "1.0.40"
dotenv = "0.15.0"
log = "0.4.14"
env_logger = "0.8.3"
chrono = { version = "0.4.19", features = [ "serde" ] }
uuid = { version = "0.8.2", features = [ "v4", "serde" ] }
rust-argon2 = "0.8"
rand = "0.8.3"
